Update main.less to fix issue #1249
Changes made:

`.fcc-footer {`
* Removed `height`: Height should be handled by `<a>` elements, so that their hover state can cover the entire height of the footer.
* Changed `padding` to 0: This allows `<a>` elements to take the entire height of the footer.

`.fcc-footer a {`
* `display` set to `inline-block` to allow `<a>` elements to have a `height` of 50px, making the `.fcc-footer` remain the same height as before.
* `padding` set to 12px top/bottom and 10px left/right. the padding that used to be in the `.fcc-footer` (12px top/bottom) is now added to the links instead (which use to have 0 top/bottom, and only 10px left/right).
* `height` of 50px: This handles the lack of height in the `.fcc-footer`, and links no longer have to rely on strange extra padding in their hover state to cover the entire footer.

`.fcc-footer a:hover {`
* Removed `padding-top` and `padding-bottom`. Is no longer necessary to rely on this weird trick to have the hover state cover the entire footer's height.

--- a/public/css/main.less
+++ b/public/css/main.less
@@ -675,23 +675,21 @@ thead {
 
 .fcc-footer {
   width: 100%;
-  height: 50px;
   text-align: center;
   background-color: #4a2b0f;
-  padding: 12px;
+  padding: 0;
   bottom: 0;
   left: 0;
   position: absolute;
   a {
     font-size: 20px;
     color: #eee;
+    display: inline-block;
+    height: 50px;
     margin-left: 0px;
     margin-right: 0px;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding: 12px 10px;
     &:hover {
-      padding-top: 14px;
-      padding-bottom: 14px;
       color: #4a2b0f;
       background-color: #eee;
       text-decoration: none;
